loop flicker transitions fix

--- a/src/components/chef/sliderstyles.css
+++ b/src/components/chef/sliderstyles.css
@@ -1,9 +1,16 @@
-.slick-slide .slick-active .slick-center .slick-current{
-    background:red!important;
-}
-.example::-webkit-scrollbar {
-	display: none;
-  }
+
   .scrollhider::-webkit-scrollbar {
 	display: none!important;
   }
+
+ .slick-slide[aria-hidden="true"]:not([tabindex="-1"]) + .slick-cloned[aria-hidden="true"]  {
+  transform: scale(0.85) ;
+  transition: all 300ms ease-in-out;
+  background:red;
+}
+
+.slick-slide[aria-hidden="true"] + .slick-cloned[aria-hidden="true"] {
+  transform: scale(1.11) translateY(3.9%);
+  transition: all 300ms ease-in-out;
+ 
+} 
